--- a/CS_Project_1/app/pages/templates/pages/login.html
+++ b/CS_Project_1/app/pages/templates/pages/login.html
@@ -25,6 +25,7 @@
               
               <div class="container  bg-secondary p-5 text-center">
                 <form id="login-form" method="POST" action="/process_form">
+                        {% csrf_token %}
                         <div class="input-group mb-3 ">
                             <input type="text" class="form-control text-center" placeholder="Login" aria-label="Username" aria-describedby="basic-addon1" name="username" maxlength="=20">
                         </div>
